# teffgen

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NEWS.md  README.md  README_PYPI.md  SECURITY.md  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  health-check.yml  monitor.yml  nightly.yml  pr-check.yml  release.yml  release.yml.disabled  update-baseline.yml
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
conda-recipe/: meta.yaml
configs/: api_keys.yaml  config.yaml  models.yaml  tools.yaml
configs/grafana/: effgen-dashboard.json  teffgen-dashboard.json
docs/: faq.md  installation.md  migration.md
docs/api/: configuration.md  reference.md
docs/architecture/: overview.md
docs/guides/: plugin-development.md  scaling.md
docs/models/: cerebras.md  openai.md  openai_advanced.md
docs/tutorials/: building-code-agent.md  building-math-agent.md  building-research-agent.md  custom-tools.md  evaluation.md  getting-started.md  guardrails.md  multi-agent-workflows.md  multi-agent.md  native-tool-calling.md  production-deployment.md  rag-pipeline.md
effgen/: __init__.py  cli.py  completion.py
effgen/api/: __init__.py  embeddings.py  middleware.py  openai_compat.py  pool.py  queue.py  tenancy.py
effgen/cache/: __init__.py  prompt_cache.py  result_cache.py
effgen/client/: __init__.py  client.py  exceptions.py
effgen/config/: __init__.py  loader.py  validator.py
effgen/core/: __init__.py  agent.py  aggregation.py  background.py  batch.py  checkpoint.py  clarification.py  complexity_analyzer.py  decomposition_engine.py  execution_tracker.py  feedback.py  human_loop.py  lifecycle.py  message_bus.py  orchestrator.py  router.py  session.py  shared_state.py  state.py  structured_output.py  sub_agent_manager.py  task.py  tool_calling.py  workflow.py
effgen/debug/: __init__.py  inspector.py
effgen/domains/: __init__.py  base.py  expander.py  presets.py
effgen/eval/: __init__.py  comparison.py  evaluator.py  regression.py  suites.py
effgen/execution/: __init__.py  docker_sandbox.py  sandbox.py  validators.py
effgen/gpu/: __init__.py  allocator.py  monitor.py  utils.py
effgen/guardrails/: __init__.py  base.py  content.py  injection.py  presets.py  tool_safety.py
effgen/hardware/: __init__.py  platform.py
effgen/memory/: __init__.py  long_term.py  short_term.py  token_budget.py  vector_store.py
effgen/models/: __init__.py  _cost.py  _rate_limit.py  anthropic_adapter.py  base.py  batching.py  capabilities.py  cerebras_adapter.py  cerebras_models.py  errors.py  gemini_adapter.py  gguf_engine.py  lazy.py  mlx_engine.py  mlx_vlm_engine.py  model_loader.py  openai_adapter.py  openai_models.py  openai_schema.py  pool.py  router.py  transformers_engine.py  vllm_engine.py
effgen/presets/: __init__.py  registry.py
effgen/prompts/: __init__.py  agent_system_prompt.py  chain_manager.py  optimizer.py  template_manager.py  tool_prompt_generator.py
effgen/rag/: __init__.py  attribution.py  chunking.py  context_builder.py  ingest.py  reranker.py  search.py
effgen/tools/: __init__.py  base_tool.py  fallback.py  plugin.py  registry.py
effgen/utils/: __init__.py  circuit_breaker.py  health.py  logging.py  metrics.py  prometheus_metrics.py  structured_logging.py  tracing.py  validators.py
examples/: README.md  multi_tool_agent.py  streaming_agent.py  v012_phase01_qa_agent.py  v012_phase02_calculator_agent.py  v012_phase03_multi_tool_agent.py  v012_phase04_file_agent.py  v012_phase05_coding_agent.py  v012_phase06_conversational_agent.py  v012_phase07_error_recovery_agent.py  v012_phase08_data_processing_agent.py  v012_phase09_streaming_agent.py  v012_phase10_multi_agent_pipeline.py  weather_agent.py
examples/advanced/: advanced_streaming_agent.py  agent_communication.py  async_concurrent_agent.py  conversational_agent.py  data_processing_agent.py  error_recovery_agent.py  multi_agent_pipeline.py
examples/basic/: agent_viz_mlx.py  basic_agent.py  basic_agent_mlx.py  basic_agent_vllm.py  calculator_agent.py  chat_gui_mlx.py  qa_agent.py  tool_builder_gui.py  tool_tester_gui.py
examples/cerebras/: basic_cerebras.py  cerebras_agent.py  cerebras_all_models.py  cerebras_cost_tracker.py  cerebras_hard_agent.py  cerebras_load_model.py  cerebras_multi_turn.py  cerebras_rate_limits.py  cerebras_streaming.py  cerebras_tool_calling.py
examples/data/: download_arc.py
examples/deployment/: README.md  docker-compose.yml  prometheus.yml
examples/openai/: __init__.py  basic_chat.py  caching_and_structured_agent.py  multi_turn_chat.py  openai_agent.py  prompt_caching.py  reasoning_models.py  structured_outputs.py  tool_calling.py
examples/plugins_presets/: plugin_example.py  preset_agents.py
examples/tools/: advanced_multi_tool_agent.py  coding_agent.py  file_operations_agent.py  multi_tool_agent.py
examples/utils/: compatibility_matrix.md  sweep_model.py
examples/web_retrieval/: agentic_search_agent.py  memory_agent.py  retrieval_agent.py  streaming_agent.py  weather_agent.py  web_agent.py
planning/v0.1.1/: build.md  checklist.md
scripts/: install_effgen.sh  install_teffgen.sh  setup_and_verify.sh  verify.py  verify.sh
teffgen/: __init__.py  cli.py  completion.py
teffgen/api/: __init__.py  embeddings.py  middleware.py  openai_compat.py  pool.py  tenancy.py
teffgen/cache/: __init__.py
teffgen/client/: __init__.py  client.py  exceptions.py
teffgen/config/: loader.py  validator.py
teffgen/core/: __init__.py  agent.py  aggregation.py  background.py  batch.py  checkpoint.py  clarification.py  complexity_analyzer.py  decomposition_engine.py  feedback.py  human_loop.py  lifecycle.py  message_bus.py  orchestrator.py  router.py  session.py  shared_state.py  state.py  structured_output.py  sub_agent_manager.py  task.py  tool_calling.py  workflow.py
teffgen/debug/: __init__.py  (+1 more)
tests/: conftest.py  v012_phase02_test.py
(+203 files in other folders)
