[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "effgen"
dynamic = ["version"]
description = "A comprehensive framework for building agents with Small Language Models"
readme = "README_PYPI.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Gaurav Srivastava", email = "gks@vt.edu"}
]
maintainers = [
    {name = "Gaurav Srivastava", email = "gks@vt.edu"}
]
keywords = [
    "ai", "agents", "llm", "slm", "language-models", "small-language-models",
    "tool-use", "function-calling", "prompt-engineering", "multi-agent",
    "agent-framework", "transformers", "vllm", "openai", "anthropic", "gemini",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    # Deep Learning & Model Support
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    # API Model Adapters
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    # Configuration Management
    "pyyaml>=6.0.1",
    "jsonschema>=4.19.0",
    "json5>=0.9.14",
    "python-dotenv>=1.0.0",
    # Tool Support & HTTP
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    # Web Search
    "duckduckgo-search>=8.1.0",
    "ddgs>=9.9.3",
    # File Operations & Code Execution
    "docker>=6.1.0",
    "nbformat>=5.9.0",
    "jupyter-client>=8.5.0",
    # Utilities
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "jinja2>=3.1.0",
    # Async Support
    "asyncio-throttle>=1.0.1",
    "nest-asyncio>=1.5.8",
    # Logging & Monitoring
    "loguru>=0.7.0",
    # GPU Management
    "gputil>=1.4.0",
    "nvidia-ml-py>=11.495.46",
    # Protocol Support - MCP
    "mcp>=1.25.0",
    # Performance Monitoring
    "psutil>=5.9.0",
    # Data Processing
    "tiktoken>=0.5.0",
    "scikit-learn>=1.3.0",
    # Security
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://effgen.org/"
Documentation = "https://effgen.org/docs/"
Repository = "https://github.com/ctrl-gaurav/effGen"
"Bug Tracker" = "https://github.com/ctrl-gaurav/effGen/issues"
Changelog = "https://github.com/ctrl-gaurav/effGen/blob/main/CHANGELOG.md"

[project.scripts]
effgen = "effgen.cli:main"
effgen-agent = "effgen.cli:agent_main"
effgen-web = "effgen.cli:web_agent_main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.12.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]
vllm = ["vllm>=0.2.7"]
flash-attn = ["flash-attn>=2.3.0"]
vector-db = [
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.18",
    "qdrant-client>=1.7.0",
]
search = [
    "duckduckgo-search>=8.1.0",
    "google-search-results>=2.4.2",
    "google-api-python-client>=2.108.0",
]
all = [
    "vllm>=0.2.7",
    "flash-attn>=2.3.0",
    "faiss-cpu>=1.7.4",
    "chromadb>=0.4.18",
    "qdrant-client>=1.7.0",
]

[tool.setuptools.dynamic]
version = {attr = "effgen.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*", "examples", "docs", "scripts"]

[tool.setuptools.package-data]
effgen = [
    "prompts/templates/*.yaml",
    "prompts/templates/*.json",
    "config/schemas/*.json",
    "config/schemas/*.yaml",
    "config/*.yaml",
    "config/*.json",
    "py.typed",
]

# Black - Code Formatter
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# isort - Import Sorter
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/build/*", "*/dist/*"]
known_first_party = ["effgen"]
known_third_party = [
    "torch",
    "transformers",
    "openai",
    "anthropic",
    "google",
    "yaml",
    "docker",
    "pytest",
]

# mypy - Type Checker
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Per-module options
[[tool.mypy.overrides]]
module = [
    "vllm.*",
    "transformers.*",
    "anthropic.*",
    "google.generativeai.*",
    "duckduckgo_search.*",
    "docker.*",
    "faiss.*",
    "chromadb.*",
    "qdrant_client.*",
]
ignore_missing_imports = true

# pytest - Testing Framework
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=effgen",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "api: marks tests that require API keys",
    "docker: marks tests that require Docker",
]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage - Code Coverage
[tool.coverage.run]
source = ["effgen"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/examples/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Pylint - Linter
[tool.pylint.main]
py-version = "3.10"
ignore = ["CVS", "migrations", "tests"]
jobs = 0  # Auto-detect CPUs

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-attributes = 15

# Bandit - Security Linter
[tool.bandit]
exclude_dirs = ["/tests", "/examples"]
skips = ["B101", "B601"]  # Skip assert_used and paramiko_calls

# Ruff - Fast Python Linter (alternative to flake8)
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py

[tool.ruff.isort]
known-first-party = ["effgen"]

# Pydocstyle - Docstring Checker
[tool.pydocstyle]
convention = "google"
add-ignore = ["D100", "D104", "D105", "D107"]
match = "(?!test_).*\\.py"
match-dir = "^(?!(tests|examples|docs)).*"
